# server-setup

./: .gitignore  AGENTS.md  README.md  REPO_FILE_MANIFEST.md  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-06-17T02-22-29-529Z.yml  page-2026-06-17T02-23-10-334Z.yml  page-2026-06-17T02-23-53-410Z.yml  page-2026-06-17T02-24-11-592Z.yml  page-2026-06-17T02-24-39-078Z.yml  page-2026-06-17T02-58-38-668Z.yml  page-2026-06-17T03-04-56-548Z.yml  page-2026-06-17T03-05-04-669Z.yml  page-2026-06-17T03-28-41-565Z.yml
configs/: env.machine1.example  env.machine2.example
docs/: ARCHITECTURE.md  BACKUP.md  EXPERIMENTAL_MTP.md  HTML_GUIDE_DRIFT_CHECKLIST.md  MACOS_PREP.md  MCP.md  MODELS.md  OPERATIONS.md  REPO_SETUP_FOR_TARGET_PROJECTS.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  constrained-json.md  dev-stack-models.md  observability.md  prompt-caching.md  rag-proxy.md  rag.md  speculative-decoding.md
plans/: 2026-05-20-html-guide-canonical-rewrite.md  2026-05-21-commit-and-cleanup.md  2026-05-21-env-username-note.md  2026-05-21-launchd-source-edits.md  2026-05-21-launchd-survive-reboot-and-crashes.md  2026-05-22-server-setup-debates-assessment.md  2026-05-23-add-antigravity-skills.md  2026-06-12-consolidate-repo-copies.md  2026-06-12-local-review-mcp-tool.md  2026-06-15-local-ai-dashboard-design.md  2026-06-15-local-ai-dashboard-plan.md  2026-06-17-constrained-json-spec.md  2026-06-17-prompt-cache-plan.md  2026-06-17-prompt-cache-spec.md  2026-06-17-rag-proxy-plan.md  2026-06-17-rag-proxy-spec.md  (+7 more)
(+79 files in other folders)
