[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-ai-stack"
version = "0.1.0"
description = "Two-Mac local AI infrastructure, LangGraph agents, and Claude/Codex MCP handoff tooling."
requires-python = ">=3.12"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "huggingface_hub[hf_xet]>=0.24.0",
]

[project.optional-dependencies]
mlx = [
  "mlx",
  "mlx-lm",
  "mlx-vlm",
  "transformers",
  "tokenizers",
  "safetensors",
]
mcp = [
  "mcp",
  "fastmcp",
  "httpx",
]
dev = [
  "ruff",
  "pytest",
]
all = [
  "mlx",
  "mlx-lm",
  "mlx-vlm",
  "transformers",
  "tokenizers",
  "safetensors",
  "mcp",
  "fastmcp",
  "httpx",
  "ruff",
  "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/local_ai_stack"]

[project.scripts]
local-ai-agents = "local_ai_stack.local_agents:main"
local-exec-plan = "local_ai_stack.local_exec_plan:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
